manifests/dep-data.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: data
  namespace: default
  labels:
    app: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      namespace: default
      labels:
        app: data
    spec:
      containers:
      - name: data
        image: vladmasarik/htwg-data
        ports:
        - containerPort: 5000
          name: data
