manifests/dep-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: default
  labels:
    app: user
    project: htwg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      namespace: default
      labels:
        app: user
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: user
        image: vladmasarik/htwg-user:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 200m
        ports:
        - containerPort: 5000
          name: data
