manifests/dep-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      namespace: default
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: vladmasarik/htwg-web
        ports:
        - containerPort: 8080
          name: http
