manifests/svc-data.yaml
apiVersion: v1
kind: Service
metadata:
  name: data
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: data
