manifests/svc-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: user
