manifests/route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: default
spec:
  port:
    targetPort: 8080
  to:
    name: web
    weight: 100
  wildcardPolicy: None
